[package]
name = "polymesh-private"
version = "2.0.0"
authors = ["PolymeshAssociation"]
build = "build.rs"
edition = "2021"

[[bin]]
name = "polymesh-private"
path = "src/main.rs"

[patch.crates-io]
# Path build to use our Substrate version from github.
frame-benchmarking = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-benchmarking-cli = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-executive = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-support = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-election-provider-support = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-system = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-system-benchmarking = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
frame-system-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-authorship = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-balances = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-contracts = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-contracts-primitives = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-election-provider-multi-phase = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-im-online = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-indices = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-offences = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-preimage = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-scheduler = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
pallet-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-basic-authorship = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-block-builder = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-chain-spec = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-cli = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-client-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-client-db = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-babe-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-epochs = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-slots = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-executor = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-consensus-grandpa-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-keystore = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-network = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-network-common = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-rpc-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-rpc-spec-v2 = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-service = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-telemetry = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-transaction-pool = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-transaction-pool-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sc-sync-state-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-application-crypto = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-arithmetic = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-block-builder = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-blockchain = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-consensus = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-consensus-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-consensus-slots = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-core = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-externalities = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-inherents = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-io = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-keystore = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-keyring = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-npos-elections = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-offchain = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-runtime = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-weights = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-state-machine = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-std = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-storage = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-tracing = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-transaction-pool = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-transaction-storage-proof = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-trie = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
sp-version = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
substrate-frame-rpc-system = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
substrate-state-trie-migration-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
substrate-prometheus-endpoint = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
substrate-build-script-utils = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }
substrate-wasm-builder = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool" }

bulletproofs = { version = "5.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "v5.0.0" }
#bulletproofs = { path = "../bulletproofs/" }
confidential_assets = { git = "https://github.com/PolymeshAssociation/confidential_assets", branch = "main" }
#confidential_assets = { path = "../confidential_assets" }

substrate-validator-set = { git = "https://github.com/PolymeshAssociation/substrate-validator-set", branch = "cli-tool" }

[workspace]
members = [
  "pallets/confidential-asset",
  "runtime/common",
  "runtime/develop",
  "runtime/production",
  "runtime/tests",
	"host-functions",
]
exclude = [
	"integration",
]

## Keep common dependencies here.
[workspace.dependencies]
# Our pallets
pallet-asset = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-balances = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-base = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-committee = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-compliance-manager = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-confidential-asset = { path = "pallets/confidential-asset/", default-features = false }
polymesh-host-functions = { path = "host-functions/", default-features = false }
pallet-corporate-actions = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-external-agents = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-group = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-identity = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-multisig = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-nft = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-permissions = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-pips = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-portfolio = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-protocol-fee = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-relayer = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-sto = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-settlement = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-statistics = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-test-utils = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-transaction-payment = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false, features = ["disable_fees"]}
pallet-treasury = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-utility = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-sudo = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
polymesh-contracts = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }

# Common
polymesh-common-utilities = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
polymesh-runtime-common = { path = "runtime/common/", default-features = false }
polymesh-primitives = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
polymesh-weights = { path = "pallets/weights/", default-features = false }

# RPC
node-rpc = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
node-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-group-rpc = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-group-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-protocol-fee-rpc = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }
pallet-protocol-fee-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }

# Build tool
polymesh-build-tool = { git = "https://github.com/PolymeshAssociation/Polymesh.git", branch = "cli-tool", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
frame-support = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
frame-system = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-authorship = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-contracts = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-executive = { package = "frame-executive", version = "4.0.0-dev", default-features = false }
pallet-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-im-online = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-indices = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-offences = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-preimage = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-insecure-randomness-collective-flip = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-scheduler = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
pallet-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
scale-info = { version = "2.0", default-features = false, features = ["derive"] }
sp-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-arithmetic = { version = "6.0.0", default-features = false }
sp-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-block-builder = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-blockchain = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-consensus = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-consensus-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-consensus-slots = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-keyring = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-core = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-inherents = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-transaction-storage-proof = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-io = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-offchain = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-runtime = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-runtime-interface = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-timestamp = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-session = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-std = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-transaction-pool = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-version = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }

# Crypto
rand = { version = "0.8", default-features = false }
rand_core = { version = "0.6", default-features = false }
rand_chacha = { version = "0.3", default-features = false }
confidential_assets = { version = "1.0.0", default-features = false }

# Validator set (PoA)
validator-set = { version = "0.9.42", package = "substrate-validator-set", default-features = false }

[dependencies]
# Our pallets
pallet-asset = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-base = { workspace = true, default-features = false }
pallet-committee = { workspace = true, default-features = false }
pallet-compliance-manager = { workspace = true, default-features = false }
pallet-confidential-asset = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
polymesh-host-functions = { workspace = true, default-features = false }
pallet-corporate-actions = { workspace = true, default-features = false }
pallet-external-agents = { workspace = true, default-features = false }
pallet-group = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false }
pallet-nft = { workspace = true, default-features = false }
pallet-permissions = { workspace = true, default-features = false }
pallet-pips = { workspace = true, default-features = false }
pallet-portfolio = { workspace = true, default-features = false }
pallet-protocol-fee = { workspace = true, default-features = false }
pallet-relayer = { workspace = true, default-features = false }
pallet-sto = { workspace = true, default-features = false }
pallet-settlement = { workspace = true, default-features = false }
pallet-statistics = { workspace = true, default-features = false }
pallet-test-utils = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-sudo = { workspace = true, default-features = false }
polymesh-contracts = { workspace = true, default-features = false }

# Common
polymesh-common-utilities = { workspace = true, default-features = false }
polymesh-runtime-common = { workspace = true, default-features = false }
polymesh-primitives = { workspace = true, default-features = false }
polymesh-weights = { workspace = true, default-features = false }

# PoA
validator-set = { workspace = true, default-features = false }

# RPC
node-rpc = { workspace = true }
node-rpc-runtime-api = { workspace = true }
pallet-group-rpc = { workspace = true }
pallet-group-rpc-runtime-api = { workspace = true }
pallet-protocol-fee-rpc = { workspace = true }
pallet-protocol-fee-rpc-runtime-api = { workspace = true }

# Runtimes
polymesh-private-runtime-develop = { path = "runtime/develop" }
polymesh-private-runtime-production = { path = "runtime/production" }

## General
futures = "0.3.21"
jsonrpsee = { version = "0.16.2", features = ["server"] }
log = "0.4"
serde = { version = "1.0.136", default-features = false }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
clap = { version = "4.0.9", features = ["derive"] }
rustc-hex = "2.1.0"

# Substrate client deps.
sc-authority-discovery = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-basic-authorship = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-chain-spec = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-cli = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-client-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-babe = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-babe-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-epochs = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-slots = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-consensus-grandpa-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-executor = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-network = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-network-common = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-rpc-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-rpc-spec-v2 = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-service = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-telemetry = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-transaction-pool = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-sync-state-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
substrate-state-trie-migration-rpc = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }

# Substrate
codec = { package = "parity-scale-codec", version = "3.0.0", default-features = false, features = ["derive", "max-encoded-len"] }
frame-support = { workspace = true }
frame-system = { workspace = true }
frame-system-rpc-runtime-api = { workspace = true }
pallet-babe = { workspace = true }
pallet-im-online = { workspace = true }
pallet-indices = { workspace = true }
pallet-session = { workspace = true }
prometheus-endpoint = { package = "substrate-prometheus-endpoint", version = "0.10.0-dev" }
sp-api = { workspace = true }
sp-authority-discovery = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-consensus-slots = { workspace = true }
sp-keyring = { workspace = true }
sp-keystore = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-transaction-storage-proof = { workspace = true }
sp-offchain = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sp-session = { workspace = true }
sp-transaction-pool = { workspace = true }

# These dependencies are used for runtime benchmarking
frame-benchmarking = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/PolymeshAssociation/polkadot-sdk", branch = "cli-tool", default-features = false }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0" }

[features]
default = ["std"]

running-ci = [ "polymesh-private-runtime-develop/running-ci" ]
default_identity = [ "polymesh-common-utilities/default_identity" ]
runtime-benchmarks = [
  "sc-service/runtime-benchmarks",
  "polymesh-private-runtime-develop/runtime-benchmarks",
  "polymesh-host-functions/runtime-benchmarks",
]

# Only build a "ci" runtime.
ci-runtime = [ "polymesh-private-runtime-develop/ci-runtime" ]

std = [
  "polymesh-common-utilities/std",
  "polymesh-host-functions/std",
  "serde/std"
]
