[package]
name = "polymesh-host-functions"
version = "0.1.0"
authors = [ "Polymesh Association" ]
license-file = "../LICENSE"
repository = "https://github.com/PolymeshAssociation/Polymesh"
description = "Polymesh Primitives"
edition = "2021"

[dependencies]
# Crypto
rand_core = { workspace = true, default-features = false }
rand_chacha = { workspace = true, default-features = false }
confidential_assets = { workspace = true, default-features = false }

lazy_static = "1.4.0"
crossbeam = "0.8"
rayon = "1.8"
log = "0.4"

# Substrate
scale-info = { workspace = true, default-features = false, features = ["derive"] }
codec = { workspace = true, default-features = false, features = ["derive"] }
sp-std = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }

[features]
default = ["std"]

no_std = ["confidential_assets/no_std"]
std = [
    "rand_core/std",
    "rand_chacha/std",
    "confidential_assets/std",
    "codec/std",
    "sp-std/std",
    "sp-core/std",
    "sp-runtime-interface/std",
]
runtime-benchmarks = []
