[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[workspace]
members = []

[patch.crates-io]
bulletproofs = { version = "4.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "polymesh" }
confidential_assets = { git = "https://github.com/PolymeshAssociation/confidential_assets", branch = "main" }

[features]
default = []

[dependencies]
anyhow = "1"
log = "0.4"

tokio = { version = "1.19", features = ["full"] }

sp-core = "26.0"
sp-runtime = "29.0"
sp-keyring = "29.0"

polymesh-api = { version = "3.9.1", features = ["download_metadata"] }
polymesh-api-tester = { version = "0.8.0" }

# Confidential Assets
confidential_assets = { version = "1.0.0" }
rand = { version = "0.8" }
