[package]
name = "integration"
version = "0.1.0"
edition = "2021"

[workspace]
members = []

[patch.crates-io]
bulletproofs = { version = "5.0.0", git = "https://github.com/PolymeshAssociation/bulletproofs", branch = "v5.0.0" }
confidential_assets = { git = "https://github.com/PolymeshAssociation/confidential_assets", branch = "main" }

# Use these for testing new versions of `polymesh-api`.
#polymesh-api = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-client = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-client-extras = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-tester = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-codegen = { git = "https://github.com/PolymeshAssociation/polymesh-api" }
#polymesh-api-codegen-macro = { git = "https://github.com/PolymeshAssociation/polymesh-api" }

[features]
default = []

previous_release = []
current_release = []

[dependencies]
anyhow = "1"
log = "0.4"

async-trait = { version = "0.1" }
tokio = { version = "1.44.2", features = ["full"] }
serde_json = "1.0.140"

sp-core = "36.1"
sp-runtime = "41.1"
sp-keyring = "41.0"
sp-weights = "31.1"
codec = { package = "parity-scale-codec", version = "3.0.0", features = ["derive", "max-encoded-len"] }

polymesh-api = { version = "3.11.0", features = ["download_metadata"] }
polymesh-api-client-extras = { version = "3.6.0" }
polymesh-api-tester = { version = "0.10.0", features = ["download_metadata"] }

# Confidential Assets
confidential_assets = { version = "1.0.0" }
rand = { version = "0.8" }
