[package]
name = "polymesh-weights"
version = "0.1.0"
authors = ["PolymeshAssociation"]
edition = "2021"

[dependencies]
# substrate pallets
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
pallet-babe = { workspace = true, default-features = false }
pallet-contracts = { workspace = true, default-features = false }
pallet-im-online = { workspace = true, default-features = false }
pallet-indices = { workspace = true, default-features = false }
pallet-grandpa = { workspace = true, default-features = false }
pallet-preimage = { workspace = true, default-features = false }
pallet-scheduler = { workspace = true, default-features = false }
pallet-session = { workspace = true, default-features = false }
sp-std = { workspace = true, default-features = false }

# our pallets
pallet-asset = { workspace = true, default-features = false }
pallet-balances = { workspace = true, default-features = false }
pallet-committee = { workspace = true, default-features = false }
pallet-compliance-manager = { workspace = true, default-features = false  }
pallet-corporate-actions = { workspace = true, default-features = false }
pallet-external-agents = { workspace = true, default-features = false }
pallet-group = { workspace = true, default-features = false }
pallet-identity = { workspace = true, default-features = false }
pallet-multisig = { workspace = true, default-features = false  }
pallet-nft = { workspace = true, default-features = false  }
pallet-pips = { workspace = true, default-features = false }
pallet-portfolio = { workspace = true, default-features = false  }
pallet-protocol-fee = { workspace = true, default-features = false  }
pallet-relayer = { workspace = true, default-features = false }
pallet-settlement = { workspace = true, default-features = false  }
pallet-statistics = { workspace = true, default-features = false  }
pallet-sto = { workspace = true, default-features = false  }
pallet-treasury = { workspace = true, default-features = false }
pallet-utility = { workspace = true, default-features = false }
pallet-test-utils = { workspace = true, default-features = false }
polymesh-contracts = { workspace = true, default-features = false }
polymesh-runtime-common = { workspace = true, default-features = false }

[features]
default = ["std"]
no_std = []
std = [
    "sp-std/std",
    "frame-system/std",
    "pallet-asset/std",
    "pallet-babe/std",
    "pallet-balances/std",
    "pallet-compliance-manager/std",
    "pallet-corporate-actions/std",
    "pallet-grandpa/std",
    "pallet-group/std",
    "pallet-identity/std",
    "pallet-im-online/std",
    "pallet-indices/std",
    "pallet-multisig/std",
    "pallet-nft/std",
    "pallet-pips/std",
    "pallet-portfolio/std",
    "pallet-protocol-fee/std",
    "pallet-relayer/std",
    "pallet-scheduler/std",
    "pallet-session/std",
    "pallet-settlement/std",
    "pallet-sto/std",
    "pallet-timestamp/std",
    "pallet-treasury/std",
    "pallet-utility/std",
    "polymesh-contracts/std",
    "polymesh-runtime-common/std",
]
